# neural-Interface-Emotive-Insight-Performance-Metrics

./: README.md
PerformanceMetric_software/data/: PerformanceMetricData-11.05_17.29-17.51_CHESS+a.csv  PerformanceMetricData.csv  PerformanceMetricData17.00-17.13_A.csv  PerformanceMetricData3.csv  PerformanceMetricData4.csv  PerformanceMetricData5.csv  PerformanceMetricData6.csv  PerformanceMetricData7.csv  PerformanceMetricData_11.05-16.33-16.39_chess.csv  PerformanceMetricData_11.05.18_17.16-17.26_А.csv  PerformanceMetricData_11.05_16.22-16.31_chess.csv  PerformanceMetricData_IRA_sleep_09.05.2018.csv  PerformanceMetricData_ROU_chess_12.05.2018_1.csv  PerformanceMetricData_ROU_chess_12.05.2018_2.csv  PerformanceMetricData_chess_11.05.2018_14_30-15_13.csv  PerformanceMetricData_chess_11.05_15.17-15.26.csv  PerformanceMetricData_iq_11.05_15.31-15.38.csv  PerformanceMetricData_iq_11.05_15.46-16.05.csv
PerformanceMetric_software/source/: CMakeLists.txt  PerformanceMetricsDemo.cpp
PerformanceMetric_software/source/include/: EdfData.h  EmotivCloudClient.h  EmotivLicense.h  FacialExpressionDetection.h  IEegData.h  IEmoStateDLL.h  IEmoStatePerformanceMetric.h  IEmotivProfile.h  Iedk.h  IedkErrorCode.h  MentalCommandDetection.h
PerformanceMetric_software/source/include/Legacy header files/: CognitivDetection.h  EegData.h  EmoStateAffectiv.h  EmoStateDLL.h  EmotivProfile.h  ExpressivDetection.h  edkErrorCode.h
PerformanceMetric_software/source/lib/win64/: edk.lib
